--- a/Otherhobby.html
+++ b/Otherhobby.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="style.css"/> 
   <style>
 	.profileimg{
-		height: 630px;
+		height: 303px;
 	}
 	
   </style>
@@ -59,10 +59,10 @@
 	</div>
 	
 	<!--Img Col-->
-	<div class="w-full lg:w-2/5">
+	<!-- <div class="w-full lg:w-2/5">
 		<img src="meimg.jpg" class="profileimg">
 		
-	</div>
+	</div> -->
 	
 	
 	<!-- Pin to top right corner -->
